Final fixed layout issue in order and downloadable grid at customer #3472

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
@@ -54,16 +54,15 @@
         .table {
                     width: 90%;
                     margin-bottom: 1rem;
+                    margin-top: 68px;
                     color: #212529;
                 }
 
 
-.mobile-table  {
-                    margin-top: 68px;
-                }
 
 
-.item_per_page {
+
+.per-page {
                     position: absolute;
                     margin-top: 66px;
                     margin-right: -1px;
@@ -71,12 +70,12 @@
                     width: 151px;
                 }
 
-.filter-left-mobile {
+.filter-left {
                         position: relative;
                         margin-right: -6px!important;
                     }
 
-.filter_for_order    {
+.dropdown-filters    {
                            margin-left: 15px;
                     }
 
